# shakespeare-x-server

./: .gitignore  Dockerfile  README.md  build.sh  deploy.py  go.mod  go.sum  hello.thrift  main.py  pyproject.toml  router.go  router_gen.go
.trae/rules/: project_rules.md
src/api/: __init__.py  auth_api.py  common.py  file_api.py  user_api.py
src/database/: __init__.py  db.py
src/dependencies/: __init__.py  token.py
src/entity/: __init__.py  file.py  user.py
src/repository/: file.py  user.py
src/utils/: __init__.py  auth.py
tests/: auth_test.py
